@@ -1,4 +1,4 @@
-/* $Id: pick2finalb.c,v 1.4.4.2.2.1 2010/06/18 09:50:11 uehira Exp $ */
+/* $Id: pick2finalb.c,v 1.4.4.2.2.2 2010/09/20 08:24:02 uehira Exp $ */
 /* pick2finalb.c */
 /* 8/22/91, 5/22/92, 7/9/92, 8/19/92, 5/25/93, 6/1/93 urabe */
 /* 97.10.3 FreeBSD */
@@ -17,25 +17,6 @@
 #include  <ctype.h>
 
 #include "winlib.h"
-
-adj_sec(tm,se,tmc,sec)
-  int *tm,*tmc;
-  double *se,*sec;
-  {
-  int i,j;
-  for(i=0;i<5;i++) tmc[i]=tm[i];
-  if((*sec=(*se))<0.0)
-    {
-    tmc[5]=0;
-    i=(int)(-(*sec));
-    if((double)i==(-(*sec))) i--;
-    i++;
-    for(j=0;j<i;j++) {tmc[5]--;adj_time(tmc);}
-    *sec+=(double)(tmc[5]+i);
-    }
-  else tmc[5]=(int)(*sec);
-  tmc[6]=(int)(*sec*1000.0)%1000;
-  }
 
 main()
   {
